--- a/app/prerender.html
+++ b/app/prerender.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="STYLE_URL">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	CONTENT
-	<script src="SCRIPT_URL"></script>
+	<script src="Main.jsx"></script>
 </body>
 </html>
